2009-09-22  Andreas Kupries  <andreask@activestate.com>

	* graph/tests/XOpsControl: Added testsuite for k-center.
	* graph/tests/ops/kcenter.test: Testsuite for k-center.
	  Changes compared to GSoC result:
	  - Test names extended with 'treeimpl'.
	  - Indentation, line-endings
	  - Several tests demonstrates how the result is influenced by
	    node ordering. Extended to accept the variations.
	  - Custom matcher/verifier for max-independent-set.
	  Note: SETUP_KCENTER_1 is not creating a complete graph,
	  violating the pre-conditions of the algorithm. This affects test
	  cases 1.3 - 1.6, it is not clear if their results are correct in
	  general.	
	  This passes the testsuite for both tcl and critcl
	  implementations of struct::graph.
	* graph/tests/XOpsSetup: Re-indented, some notes added, loop
	  conditions tweaked.

	* graph/tests/XOpsControl: Added testsuite for vertex cover.
	* graph/tests/ops/verticescover.test: Testsuite for vertex cover.
	  Changes compared to GSoC result:
	  - Test names extended with 'treeimpl'.
	  - Indentation, line-endings
	  - Several tests demonstrates how the result is influenced by
	    node ordering. Extended to accept the variations.
	  This passes the testsuite for both tcl and critcl
	  implementations of struct::graph.

2009-09-21  Andreas Kupries  <andreask@activestate.com>

	* graph/tests/XOpsControl: Added the testsuites for metrictsp,
	  christofides and tspheuristics.
	* graph/tests/ops/metrictsp.test: Testsuite for metrictsp.
	* graph/tests/ops/christofides.test: Testsuite for christofides.
	* graph/tests/ops/tspheuristics.test: Testsuite for tspheuristics.
	  Changes compared to GSoC result:
	  - Test names extended with 'treeimpl'.
	  - Indentation, line-endings
	  - Conversion to v2 syntax, and cleanup of resource handling.
	  - Updated results for different implementations, sorting.

	* graph/tests/XOpsSetup (SETUP_TSPHEURISTIC_1): Fixed growing
	  cycle list throwing of repeated execution of the same test.
